# strava-club-activity-tracker

./: .dockerignore  .env-example  .gitignore  CLAUDE.md  DATABASE_REFACTORING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
notebooks/: strava_data_analysis.ipynb
scripts/: setup_ec2.sh
src/: __init__.py  admin_database.py  auth.py  config.py  database.py  store_token.py  strava_client.py  sync_service.py  unified_database.py
src/databases/: __init__.py  admin_database.py  strava_data_database.py
src/routes/: __init__.py  admin_routes.py  main_routes.py
static/css/: style.css
templates/: admin.html  admin_date_filters.html  admin_discounts.html  admin_settings.html  dashboard.html  discount.html  index.html
tests/: README.md  __init__.py  conftest.py  test_activities_filtered.py  test_config.py  test_sync_service.py
