[project]
name = "strava-club-activity-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.9",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "uvicorn>=0.37.0",
]
